Prevent page jumping down on close
Thanks, stackoverflow

--- a/HelpMyStreetFE/HelpMyStreetFE/src/sass/components/home/_map.scss
+++ b/HelpMyStreetFE/HelpMyStreetFE/src/sass/components/home/_map.scss
@@ -1,4 +1,6 @@
 ﻿.map {
+  overflow-anchor: none;
+
   &.homepage-map {
     min-width: 80%;
     min-height: 500px;
